--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@ nav {
     line-height: 80px;
     padding: 0 50px;
     font-weight: bold;
-
+    float: left;
 }
 
 nav ul {
-    float: right;
-    margin-right: 20px;
+    float: left;
+    margin-left: 200px;
 }
 nav ul li {
     display: inline-block;
@@ -57,6 +57,7 @@ nav a:hover {
     background-color: #01405b;
 }
 
+
 .checkbtn {
     font-size: 30px;
     color: #ffffff;
@@ -69,6 +70,75 @@ nav a:hover {
 #check {
     display: none;
 }
+
+/* Dropdown */
+.dropdown {
+    float: right;
+    overflow: hidden;
+    line-height: 80px;
+    margin-left: 100px;
+    margin-right: 40px;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+    font-size: 18px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: #176384;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: #01405b;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    line-height: 30px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 5px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Container1 */
+
+.container1{
+    padding-top: 200px;
+    font-size: 20px;
+    width: 100vw;
+   text-align: center;
+}
+
+
 
 /* Footer */
 
@@ -84,9 +154,6 @@ nav a:hover {
     height: 50px;
     padding: 10px;
 }
-
-
-
 
 @media (max-width: 1270px) {
     all {
